fix: start screen text align

--- a/app/public/css/controller.css
+++ b/app/public/css/controller.css
@@ -56,7 +56,6 @@ main {
 }
 
 .start-screen section p {
-    text-align: justify;
     font-size: 3vh;
 }
 
